@@ -31,6 +31,10 @@
         XMLConfiguration now adds attributes of elements defining a list to
         all list nodes.
       </action>
+      <action dev="oheger" type="update" issue="CONFIGURATION-526" due-to="Oliver Kopp">
+        XMLPropertiesConfiguration now supports loading from and saving to DOM
+        nodes.
+      </action>
       <action dev="oheger" type="update" issue="CONFIGURATION-534">
         The includesAllowed property of PropertyConfiguration is now independent
         from the existence of a base path.
